@@ -1,3 +1,7 @@
+2000-08-22  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
+
+	* exult.cc: ctrl+alt+t now brings up a map for teleporting
+
 2000-08-21  Tristan Tarrant  <nadir@users.sourceforge.net>
 
 	objs.h: Fixed small leak in ~Frames_sequence()
